src/objects/Webinar__c.object
<CustomObject>
    <fields>
        <fullName>Account_Purchase_After_Webinar__c</fullName>
        <formula>Account__r.Client_Start_Date__c  &gt;=  Date1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Purchase After Webinar</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Webinars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attendance_Count__c</fullName>
        <formula>IF( Status__c = &quot;Attended&quot;,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attendance Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT_Score__c</fullName>
        <formula>IF(ISPICKVAL(Webinar_CSAT__c,&quot;Satisfied&quot;),5,
IF(ISPICKVAL(Webinar_CSAT__c,&quot;Somewhat Satisfied&quot;),4,
IF(ISPICKVAL(Webinar_CSAT__c,&quot;Neutral&quot;),3,
IF(ISPICKVAL(Webinar_CSAT__c,&quot;Somewhat Dissatisfied&quot;),2,
IF(ISPICKVAL(Webinar_CSAT__c,&quot;Dissatisfied&quot;),1, 
NULL)))))</formula>
        <label>CSAT Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CSAT__c</fullName>
        <formula>IF( CSAT_Score__c &gt;= 4,TRUE,FALSE)</formula>
        <label>CSAT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citrix_Source__c</fullName>
        <label>Citrix Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Webinars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_or_Lead__c</fullName>
        <formula>IF(  OR(ISBLANK( Lead__c ) &amp;&amp;   NOT(ISBLANK( Contact__c )),ISBLANK( Lead__c ) &amp;&amp;   ISBLANK( Contact__c ) &amp;&amp;  NOT( ISBLANK( Account__c ) ))  , 
&quot;Contact&quot;,
IF( OR(ISBLANK(  Contact__c ) &amp;&amp; NOT(ISBLANK(  Lead__c  )),NOT(ISBLANK( Contact__c ))&amp;&amp;NOT(ISBLANK(  Lead__c  ))) ,
&quot;Lead&quot;,
&quot;Not Found&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact or Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Lead__c</fullName>
        <formula>Lead__r.IsConverted = True</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date1__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GoToWebinar_ID__c</fullName>
        <label>GoToWebinar ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>Webinars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_or_Contact_Owner__c</fullName>
        <formula>IF( Contact_or_Lead__c = &quot;Contact&quot;,   Account__r.Owner.Full_Name__c  ,  Lead__r.Owner:User.Full_Name__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead or Contact Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_or_Contact_Team__c</fullName>
        <formula>IF( Contact_or_Lead__c = &quot;Contact&quot;,  Contact__r.Owner.Department ,  Lead__r.Owner:User.Department )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead or Contact Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_to_Paid_Conversion__c</fullName>
        <description>Account__r.Converted_Lead_Creation_Date__c</description>
        <formula>Date1__c  &lt;    DATEVALUE( Account__r.CreatedDate ) &amp;&amp;  Date1__c  &lt;   Account__r.Converted_Lead_Creation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New to Paid Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_to_Trial_Conversion__c</fullName>
        <formula>IF(  ISBLANK(Lead__c)=False &amp;&amp; (Date1__c  &lt;   DATEVALUE( Lead__r.CreatedDate )),
TRUE,
IF(ISBLANK( Account__c )=False  &amp;&amp; (Date1__c &lt;  Account__r.Converted_Lead_Creation_Date__c  ),
True,False))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New to Trial Conversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Registrant_Email__c</fullName>
        <label>Registrant Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Registration_Count__c</fullName>
        <formula>IF( ISBLANK( Status__c ),0,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Comments__c</fullName>
        <description>survey result</description>
        <inlineHelpText>What topic covered in this workshop would you like to have more information about?</inlineHelpText>
        <label>Survey Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Completion_Date__c</fullName>
        <label>Survey Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Survey_Conversion_Optimization__c</fullName>
        <description>survey result</description>
        <inlineHelpText>What area of conversion optimization would you have liked to spend more time on?</inlineHelpText>
        <label>Survey Conversion Optimization</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Information_Requested__c</fullName>
        <inlineHelpText>What topic covered in this workshop would you like to have more information about?</inlineHelpText>
        <label>Survey Information Requested</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Likely_to_Suggest__c</fullName>
        <inlineHelpText>How likely are you to suggest this workshop to another eCommerce business?</inlineHelpText>
        <label>Survey Likely to Suggest</label>
        <picklist>
            <picklistValues>
                <fullName>Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Not Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Likely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Name__c</fullName>
        <label>Survey Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Resource_Utilization__c</fullName>
        <description>Survey Result</description>
        <inlineHelpText>How likely are you to utilize Bigcommerce’s educational and support resources provided?</inlineHelpText>
        <label>Survey Resource Utilization</label>
        <picklist>
            <picklistValues>
                <fullName>Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Not Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Likely</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Survey_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if the survey request email was sent to this registrant</inlineHelpText>
        <label>Survey Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey_Suggestion_Score__c</fullName>
        <formula>IF(ISPICKVAL(Survey_Likely_to_Suggest__c,&quot;Likely&quot;),5,
IF(ISPICKVAL(Survey_Likely_to_Suggest__c,&quot;Somewhat Likely&quot;),4,
IF(ISPICKVAL(Survey_Likely_to_Suggest__c,&quot;Neutral&quot;),3,
IF(ISPICKVAL(Survey_Likely_to_Suggest__c,&quot;Somewhat Not Likely&quot;),2,
IF(ISPICKVAL(Survey_Likely_to_Suggest__c,&quot;Not Likely&quot;),1,
NULL)))))</formula>
        <label>Survey Suggestion Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Taken__c</fullName>
        <formula>IF(ISBLANK(Survey_Completion_Date__c ) = TRUE, FALSE, TRUE)</formula>
        <label>Survey Taken</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <formula>IF(ISPICKVAL(Survey_Resource_Utilization__c,&quot;Likely&quot;),5,
IF(ISPICKVAL(Survey_Resource_Utilization__c,&quot;Somewhat Likely&quot;),4,
IF(ISPICKVAL(Survey_Resource_Utilization__c,&quot;Neutral&quot;),3,
IF(ISPICKVAL(Survey_Resource_Utilization__c,&quot;Somewhat Not Likely&quot;),2,
IF(ISPICKVAL(Survey_Resource_Utilization__c,&quot;Not Likely&quot;),1, 
NULL)))))</formula>
        <label>Survey Resource Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TempAccountId__c</fullName>
        <formula>Lead__r.ConvertedAccountId</formula>
        <label>TempAccountId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TempContactId__c</fullName>
        <formula>Lead__r.ConvertedContactId</formula>
        <label>TempContactId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_in_Webinar__c</fullName>
        <label>Time in Webinar</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Webinar_CSAT__c</fullName>
        <description>survey result</description>
        <inlineHelpText>How satisfied were you with the content from this workshop?</inlineHelpText>
        <label>Webinar CSAT</label>
        <picklist>
            <picklistValues>
                <fullName>Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neutral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat Dissatisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Webinar_Unique_ID__c</fullName>
        <formula>Id 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,1,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,2,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,3,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,4,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,5,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,6,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,7,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,8,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,9,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,10,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1) 
&amp; MID(&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ012345&quot;,( 
IF(FIND(MID(Id,11,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,1,0) 
+IF(FIND(MID(Id,12,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,2,0) 
+IF(FIND(MID(Id,13,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,4,0) 
+IF(FIND(MID(Id,14,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,8,0) 
+IF(FIND(MID(Id,15,1), &quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;)&gt;0,16,0) 
)+1,1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Webinar Unique ID</label>
        <type>Text</type>
    </fields>
    <label>zWebinar</label>
    <nameField>
        <label>Webinar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Webinars</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>